dist/1.0/bin/sample/retrieveUnpackaged/objects/ESB_Status__c.object
<CustomObject>
    <fields>
        <fullName>AllOK__c</fullName>
        <label>AllOK</label>
        <picklist>
            <picklistValues>
                <fullName>yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ESB_Status</label>
    <nameField>
        <displayFormat>ESB-{00000000}</displayFormat>
        <label>ESB_Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ESB_Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>